fix bugs for multiwoz data format

--- a/workflow/multiwozgen.ipynb
+++ b/workflow/multiwozgen.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "reserved-village",
+   "execution_count": 17,
+   "id": "confident-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,15 @@
     "json_list = []\n",
     "other_domains = [\"taxi\", \"train\", \"bus\", \"police\", \"hotel\", \"attraction\", \"hospital\"]\n",
     "service_domain = \"restaurant\"\n",
-    "turn_id = 0"
+    "turn_id = 0\n",
+    "num_workflows = -1 # track the number of processed workflows\n",
+    "turn_cnt = -1 # track the turn count within a workflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "smoking-reach",
+   "execution_count": 18,
+   "id": "derived-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "yellow-broad",
+   "execution_count": 19,
+   "id": "invalid-latest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +42,14 @@
     "    dialog_cnt += 1\n",
     "    dialogue_id = \"CAiFE\" + str(dialog_cnt)\n",
     "    line_dict = {\"dialogue_id\": dialogue_id, \"services\": [\"restaurant\"], \n",
-    "                 \"turns\": [{\"frames\": []}]}\n",
+    "                 \"turns\": []}\n",
     "    return line_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "alone-geneva",
+   "execution_count": 20,
+   "id": "composed-buffer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,48 +64,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "incorporated-sydney",
+   "execution_count": 21,
+   "id": "ambient-cathedral",
    "metadata": {},
    "outputs": [],
    "source": [
     "for line in Lines:\n",
     "    if line[0:4] == \"----\":\n",
     "        line_dict = init_dict(dialog_cnt)\n",
+    "        num_workflows += 1 # 0 for the 1st time this loop is executed\n",
+    "        if num_workflows > 0: # append only after at least 1 workflow is processed\n",
+    "            json_list.append(line_dict)\n",
     "        continue\n",
     "    \n",
-    "    # identify the speaker using ':' as separator and taking letter up to ':'\n",
-    "    ind = line.index(':')\n",
+    "    line_dict[\"turns\"].append({\"frames\": []}) # init frames key for each line\n",
+    "    turn_cnt += 1 # increase the turn count to use the appended dictionary\n",
+    "    \n",
+    "    ind = line.index(':') # identify speaker by taking letters up to first ':'\n",
     "    speaker = line[0: ind]\n",
     "    \n",
     "    #identify if keyword exists in a line and get start and end indices\n",
     "    ind1 = line.index('[')\n",
     "    ind2 = line.index(']')\n",
     "    \n",
-    "    if speaker == \"SYSTEM\":\n",
-    "        if ind2 - ind1 == 1: # no keyword exists\n",
-    "            frame_dict = []\n",
-    "        else: # slot name, value exists\n",
-    "            line_lowercase = line.lower() # get the lower case versio of the line\n",
-    "            slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
-    "            name_list = slot_name_val.split(',')\n",
-    "            slotName = name_list[0].strip()\n",
-    "            slotVal = name_list[1].strip()\n",
+    "    # if SYSTEM has attributes fill in; if no attributes then init above is enough \n",
+    "    if (speaker == \"SYSTEM\") and (ind2 - ind1 > 1):\n",
+    "        line_lowercase = line.lower() # get the lower case version of the line\n",
+    "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
+    "        name_list = slot_name_val.split(',')\n",
+    "        slotName = name_list[0].strip()\n",
+    "        slotVal = name_list[1].strip()\n",
     "            \n",
-    "            start = line_lowercase.index(slotVal) # get the start index of value\n",
-    "            exclusive_end = start + len(slotVal) # get the end index of value\n",
-    "            frame_dict = {\"actions\": [], \"service\": service_domain,\n",
-    "                          \"slots\": [{\"exclusive_end\": exclusive_end,\n",
-    "                                     \"slot\": slotName,\n",
-    "                                     \"start\": start,\n",
-    "                                     \"value\": slotVal\n",
-    "                                    }\n",
-    "                                   ]\n",
-    "                         }\n",
-    "        line_dict[\"turns\"][0][\"frames\"].append(frame_dict)\n",
+    "        start = line_lowercase.index(slotVal) # get the start index of value\n",
+    "        exclusive_end = start + len(slotVal) # get the end index of value\n",
+    "        frame_dict = {\"actions\": [], \"service\": service_domain,\n",
+    "                      \"slots\": [{\"exclusive_end\": exclusive_end,\n",
+    "                                 \"slot\": slotName,\n",
+    "                                 \"start\": start,\n",
+    "                                 \"value\": slotVal\n",
+    "                                }\n",
+    "                               ]\n",
+    "                     }\n",
+    "        line_dict[\"turns\"][turn_cnt][\"frames\"].append(frame_dict)\n",
     "        \n",
-    "    else: # case of speake being USER\n",
-    "        line_lowercase = line.lower() # get the lower case versio of the line\n",
+    "    if speaker == \"USER\": # case of speake being USER\n",
+    "        line_lowercase = line.lower() # get the lower case version of the line\n",
     "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
     "        name_list = slot_name_val.split(',')\n",
     "        slotName = name_list[0].strip() # 1st value is slot name\n",
@@ -125,24 +130,24 @@
     "                               }\n",
     "                      \n",
     "                     }\n",
-    "        line_dict[\"turns\"][0][\"frames\"].append(frame_dict)\n",
+    "        line_dict[\"turns\"][turn_cnt][\"frames\"].append(frame_dict)\n",
     "        other_domain_list = add_other_domains() # get values for other domains\n",
     "        for val in other_domain_list:\n",
-    "            line_dict[\"turns\"][0][\"frames\"].append(val)\n",
+    "            line_dict[\"turns\"][turn_cnt][\"frames\"].append(val)\n",
     "        \n",
-    "    utterance = line[ind2+3: -3]\n",
+    "    utterance = line[ind2+3: -2]\n",
     "    \n",
-    "    line_dict[\"turns\"][0][\"frames\"].append({\"speaker\": speaker})\n",
-    "    line_dict[\"turns\"][0][\"frames\"].append({\"turn_id\": turn_id})\n",
+    "    utterance_dict = {\"speaker\": speaker, \"turn_id\": turn_id, \"utterance\": utterance}\n",
+    "    line_dict[\"turns\"][turn_cnt][\"frames\"].append(utterance_dict)\n",
     "    turn_id += 1\n",
-    "    line_dict[\"turns\"][0][\"frames\"].append({\"utterance\": utterance})\n",
-    "    json_list.append(line_dict)"
+    "    \n",
+    "json_list.append(line_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "polish-construction",
+   "execution_count": 22,
+   "id": "rolled-wheel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organizational-might",
+   "id": "efficient-document",
    "metadata": {},
    "outputs": [],
    "source": []
