--- a/workflow/multiwozgen.ipynb
+++ b/workflow/multiwozgen.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "confident-scottish",
+   "execution_count": 1,
+   "id": "lesbian-essence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,13 @@
     "other_domains = [\"taxi\", \"train\", \"bus\", \"police\", \"hotel\", \"attraction\", \"hospital\"]\n",
     "service_domain = \"restaurant\"\n",
     "turn_id = 0\n",
-    "num_workflows = -1 # track the number of processed workflows\n",
-    "turn_cnt = -1 # track the turn count within a workflow"
+    "num_workflows = -1 # track the number of processed workflows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "derived-accident",
+   "execution_count": 2,
+   "id": "reflected-explorer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "invalid-latest",
+   "execution_count": 3,
+   "id": "alleged-jordan",
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_dict(dialog_cnt):\n",
     "    turn_id = 0\n",
     "    dialog_cnt += 1\n",
-    "    dialogue_id = \"CAiFE\" + str(dialog_cnt)\n",
+    "    dialogue_id = \"CAiFE\" + str(dialog_cnt) + \".json\"\n",
     "    line_dict = {\"dialogue_id\": dialogue_id, \"services\": [\"restaurant\"], \n",
     "                 \"turns\": []}\n",
     "    return line_dict"
@@ -48,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "composed-buffer",
+   "execution_count": 4,
+   "id": "smoking-mills",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ambient-cathedral",
+   "execution_count": 5,
+   "id": "disabled-david",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,24 +76,24 @@
     "            json_list.append(line_dict)\n",
     "        continue\n",
     "    \n",
-    "    line_dict[\"turns\"].append({\"frames\": []}) # init frames key for each line\n",
-    "    turn_cnt += 1 # increase the turn count to use the appended dictionary\n",
-    "    \n",
-    "    ind = line.index(':') # identify speaker by taking letters up to first ':'\n",
-    "    speaker = line[0: ind]\n",
-    "    \n",
+    "    speaker = line[0: line.index(':')] # identify speaker - letters up to 1st ':'\n",
     "    #identify if keyword exists in a line and get start and end indices\n",
     "    ind1 = line.index('[')\n",
     "    ind2 = line.index(']')\n",
+    "    utterance = line[ind2+3: -2] # extract utterance\n",
+    "    \n",
+    "    # for each turn_id setup the dictionary in turns list\n",
+    "    line_dict[\"turns\"].append({\"frames\": [], \"speaker\": speaker, \n",
+    "                               \"turn_id\": turn_id, \"utterance\": utterance}) \n",
+    "    \n",
+    "    line_lowercase = line.lower() # get the lower case version of the line\n",
     "    \n",
     "    # if SYSTEM has attributes fill in; if no attributes then init above is enough \n",
     "    if (speaker == \"SYSTEM\") and (ind2 - ind1 > 1):\n",
-    "        line_lowercase = line.lower() # get the lower case version of the line\n",
     "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
     "        name_list = slot_name_val.split(',')\n",
     "        slotName = name_list[0].strip()\n",
     "        slotVal = name_list[1].strip()\n",
-    "            \n",
     "        start = line_lowercase.index(slotVal) # get the start index of value\n",
     "        exclusive_end = start + len(slotVal) # get the end index of value\n",
     "        frame_dict = {\"actions\": [], \"service\": service_domain,\n",
@@ -105,16 +104,14 @@
     "                                }\n",
     "                               ]\n",
     "                     }\n",
-    "        line_dict[\"turns\"][turn_cnt][\"frames\"].append(frame_dict)\n",
+    "        line_dict[\"turns\"][turn_id][\"frames\"].append(frame_dict)\n",
     "        \n",
-    "    if speaker == \"USER\": # case of speake being USER\n",
-    "        line_lowercase = line.lower() # get the lower case version of the line\n",
+    "    if speaker == \"USER\": # case of speaker being USER\n",
     "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
     "        name_list = slot_name_val.split(',')\n",
     "        slotName = name_list[0].strip() # 1st value is slot name\n",
     "        slotVal = name_list[1].strip()  # 2nd value is the slot value\n",
     "        active_intent = name_list[2].strip() # 3rd is the active intent\n",
-    "        \n",
     "        start = line_lowercase.index(slotVal) # get the start index of value\n",
     "        exclusive_end = start + len(slotVal) # get the end index of value\n",
     "        frame_dict = {\"actions\": [], \"service\": service_domain,\n",
@@ -130,15 +127,12 @@
     "                               }\n",
     "                      \n",
     "                     }\n",
-    "        line_dict[\"turns\"][turn_cnt][\"frames\"].append(frame_dict)\n",
+    "        line_dict[\"turns\"][turn_id][\"frames\"].append(frame_dict)\n",
+    "        \n",
     "        other_domain_list = add_other_domains() # get values for other domains\n",
     "        for val in other_domain_list:\n",
-    "            line_dict[\"turns\"][turn_cnt][\"frames\"].append(val)\n",
-    "        \n",
-    "    utterance = line[ind2+3: -2]\n",
-    "    \n",
-    "    utterance_dict = {\"speaker\": speaker, \"turn_id\": turn_id, \"utterance\": utterance}\n",
-    "    line_dict[\"turns\"][turn_cnt][\"frames\"].append(utterance_dict)\n",
+    "            line_dict[\"turns\"][turn_id][\"frames\"].append(val)\n",
+    "\n",
     "    turn_id += 1\n",
     "    \n",
     "json_list.append(line_dict)"
@@ -146,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "rolled-wheel",
+   "execution_count": 6,
+   "id": "critical-transsexual",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efficient-document",
+   "id": "polar-engine",
    "metadata": {},
    "outputs": [],
    "source": []
