fixes for multi-workflows

--- a/workflow/multiwozgen.ipynb
+++ b/workflow/multiwozgen.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "burning-brighton",
+   "execution_count": 7,
+   "id": "illegal-quantum",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "utterance_file = \"utterance2.txt\"\n",
+    "utterance_file = \"utterance_multi.txt\"\n",
     "dialog_cnt = 1000\n",
-    "outfile_cnt = 10\n",
+    "json_file_name = \"dialogues_011.json\"\n",
     "json_list = []\n",
     "other_domains = [\"taxi\", \"train\", \"bus\", \"police\", \"hotel\", \"attraction\", \"hospital\"]\n",
     "service_domain = \"restaurant\"\n",
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "fitting-premises",
+   "execution_count": 2,
+   "id": "southeast-aviation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "legitimate-diana",
+   "execution_count": 3,
+   "id": "resident-enclosure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "engaging-shirt",
+   "execution_count": 4,
+   "id": "north-explorer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "advanced-board",
+   "execution_count": 8,
+   "id": "elder-insight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "backed-frost",
+   "execution_count": 9,
+   "id": "potential-manual",
    "metadata": {},
    "outputs": [],
    "source": [
     "json_object = json.dumps(json_list, indent=2)\n",
-    "outfile_cnt += 1\n",
-    "json_file_name = \"dialogues_0\" + str(outfile_cnt) + \".json\"\n",
+    "\n",
     "with open(json_file_name, \"w\") as fp:\n",
     "    fp.write(json_object)"
    ]
@@ -154,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controversial-parcel",
+   "id": "plastic-process",
    "metadata": {},
    "outputs": [],
    "source": []
