added multislot handling in multiwozgen

--- a/workflow/multiwozgen.ipynb
+++ b/workflow/multiwozgen.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "id": "illegal-quantum",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "utterance_file = \"utterance_multi.txt\"\n",
+    "utterance_file = \"test_multi.txt\"\n",
     "dialog_cnt = 1000\n",
-    "json_file_name = \"dialogues_011.json\"\n",
+    "outfile = \"dialogues_051.json\"\n",
     "json_list = []\n",
     "other_domains = [\"taxi\", \"train\", \"bus\", \"police\", \"hotel\", \"attraction\", \"hospital\"]\n",
     "service_domain = \"restaurant\"\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "southeast-aviation",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "id": "resident-enclosure",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "north-explorer",
    "metadata": {},
    "outputs": [],
@@ -60,12 +60,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
+   "id": "correct-triple",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_slots_list(speaker, utterance, attr_vals):\n",
+    "    utterance = utterance.lower()\n",
+    "    attr_vals = attr_vals.lower()\n",
+    "    ind = 0 # a counter that keeps track if keywords such as \"slots:\", \"req_slots:\" etc. are specified\n",
+    "    \n",
+    "    if not attr_vals == \"[]\": # split only if attr_vals has something other than \"[]\"\n",
+    "        attr_list = attr_vals.split(';') # get the slots, req_slots, slot_vals and intent\n",
+    "    \n",
+    "    slots_list = []\n",
+    "    if \"slots:\" in attr_vals: # if values for slots are specified\n",
+    "        slots = attr_list[ind].strip()[6:].strip() # 0th element contains slots\n",
+    "        ind += 1\n",
+    "        slot_name_values = slots.split(',') # extract the slot_name=value tuple separated by ','\n",
+    "        for slot_name_value in slot_name_values:\n",
+    "            slot_name = slot_name_value.split('=')[0].strip()\n",
+    "            slot_value = slot_name_value.split('=')[1].strip()\n",
+    "            start = utterance.index(slot_value) # get the start index of value\n",
+    "            exclusive_end = start + len(slot_value) # get the end index of value\n",
+    "            slots_list.append({\"exclusive_end\": exclusive_end,\n",
+    "                              \"slot\": slot_name,\n",
+    "                              \"start\": start,\n",
+    "                              \"value\": slot_value})\n",
+    "            \n",
+    "    if speaker == \"SYSTEM\": # if the speaker is system then only slot_list need to be returned\n",
+    "        return slots_list\n",
+    "    \n",
+    "    requested_slots = []\n",
+    "    if \"req_slots:\" in attr_vals:\n",
+    "        req_slots = attr_list[ind].strip()[10:].strip() # extract the req_list values\n",
+    "        ind += 1\n",
+    "        req_slots_values = req_slots.split(',')\n",
+    "        for slot_name in req_slots_values:\n",
+    "            requested_slots.append(slot_name.strip())\n",
+    "    \n",
+    "    slot_values = {}\n",
+    "    if \"slot_vals:\" in attr_vals:\n",
+    "        slot_vals = attr_list[ind].strip()[10:].strip()\n",
+    "        ind += 1\n",
+    "        slot_name_vals = slot_vals.split(',')\n",
+    "        for slot_name_val in slot_name_vals:\n",
+    "            slot_name = slot_name_val.split('=')[0].strip()\n",
+    "            slot_val = slot_name_val.split('=')[1].strip().split()\n",
+    "            slot_values[slot_name] = slot_val\n",
+    "    \n",
+    "    active_intent = \"NONE\"\n",
+    "    if \"intent:\" in attr_vals:\n",
+    "        active_intent = attr_list[ind].strip()[7:].strip()\n",
+    "    \n",
+    "    return slots_list, requested_slots, slot_values, active_intent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "elder-insight",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for line in Lines:\n",
+    "line_num = 0\n",
+    "while line_num < len(Lines):\n",
+    "    line = Lines[line_num]\n",
     "    if line[0:4] == \"----\":\n",
     "        num_workflows += 1 # 0 for the 1st time this loop is executed\n",
     "        if num_workflows > 0: # append only after at least 1 workflow is processed\n",
@@ -73,58 +133,33 @@
     "        dialog_cnt += 1\n",
     "        line_dict = init_dict(dialog_cnt)\n",
     "        turn_id = 0\n",
+    "        line_num += 1\n",
     "        continue\n",
     "    \n",
-    "    speaker = line[0: line.index(':')] # identify speaker - letters up to 1st ':'\n",
-    "    #identify if keyword exists in a line and get start and end indices\n",
-    "    ind1 = line.index('[')\n",
-    "    ind2 = line.index(']')\n",
-    "    utterance = line[ind2+3: -2] # extract utterance\n",
+    "    speaker = line[0: line.index(':')].strip() # identify speaker - letters up to 1st ':'\n",
+    "    utterance = line[line.index(':') + 1: -1].strip() # extract utterance\n",
     "    \n",
     "    # for each turn_id setup the dictionary in turns list\n",
     "    line_dict[\"turns\"].append({\"frames\": [], \"speaker\": speaker, \n",
     "                               \"turn_id\": turn_id, \"utterance\": utterance}) \n",
     "    \n",
-    "    line_lowercase = line.lower() # get the lower case version of the line\n",
+    "    attr_vals = Lines[line_num+1].strip()\n",
     "    \n",
     "    # if SYSTEM has attributes fill in; if no attributes then init above is enough \n",
-    "    if (speaker == \"SYSTEM\") and (ind2 - ind1 > 1):\n",
-    "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
-    "        name_list = slot_name_val.split(',')\n",
-    "        slotName = name_list[0].strip()\n",
-    "        slotVal = name_list[1].strip()\n",
-    "        start = line_lowercase.index(slotVal) # get the start index of value\n",
-    "        exclusive_end = start + len(slotVal) # get the end index of value\n",
-    "        frame_dict = {\"actions\": [], \"service\": service_domain,\n",
-    "                      \"slots\": [{\"exclusive_end\": exclusive_end,\n",
-    "                                 \"slot\": slotName,\n",
-    "                                 \"start\": start,\n",
-    "                                 \"value\": slotVal\n",
-    "                                }\n",
-    "                               ]\n",
-    "                     }\n",
+    "    if (speaker == \"SYSTEM\") and (not attr_vals == \"[]\" ):\n",
+    "        slots_list = get_slots_list(speaker, utterance, attr_vals)\n",
+    "        frame_dict = {\"actions\": [], \"service\": service_domain,\"slots\": slot_list}\n",
     "        line_dict[\"turns\"][turn_id][\"frames\"].append(frame_dict)\n",
     "        \n",
     "    if speaker == \"USER\": # case of speaker being USER\n",
-    "        slot_name_val = line_lowercase[ind1+1: ind2] # extract slot name and value pair\n",
-    "        name_list = slot_name_val.split(',')\n",
-    "        slotName = name_list[0].strip() # 1st value is slot name\n",
-    "        slotVal = name_list[1].strip()  # 2nd value is the slot value\n",
-    "        active_intent = name_list[2].strip() # 3rd is the active intent\n",
-    "        start = line_lowercase.index(slotVal) # get the start index of value\n",
-    "        exclusive_end = start + len(slotVal) # get the end index of value\n",
+    "        slot_list, requested_slots, slot_values, active_intent = get_slots_list(speaker, utterance, attr_vals)\n",
+    "        \n",
     "        frame_dict = {\"actions\": [], \"service\": service_domain,\n",
-    "                      \"slots\": [{\"exclusive_end\": exclusive_end,\n",
-    "                                 \"slot\": slotName,\n",
-    "                                 \"start\": start,\n",
-    "                                 \"value\": slotVal\n",
-    "                                }\n",
-    "                               ],\n",
+    "                      \"slots\": slot_list,\n",
     "                      \"state\": {\"active_intent\": active_intent,\n",
-    "                                \"requested_slots\": [],\n",
-    "                                \"slot_values\": {}\n",
+    "                                \"requested_slots\": requested_slots,\n",
+    "                                \"slot_values\": slot_values\n",
     "                               }\n",
-    "                      \n",
     "                     }\n",
     "        line_dict[\"turns\"][turn_id][\"frames\"].append(frame_dict)\n",
     "        \n",
@@ -133,27 +168,28 @@
     "            line_dict[\"turns\"][turn_id][\"frames\"].append(val)\n",
     "\n",
     "    turn_id += 1\n",
+    "    line_num += 2\n",
     "\n",
     "json_list.append(line_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "potential-manual",
    "metadata": {},
    "outputs": [],
    "source": [
     "json_object = json.dumps(json_list, indent=2)\n",
     "\n",
-    "with open(json_file_name, \"w\") as fp:\n",
+    "with open(outfile, \"w\") as fp:\n",
     "    fp.write(json_object)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "plastic-process",
+   "id": "arranged-annex",
    "metadata": {},
    "outputs": [],
    "source": []
