accumulate slot-name pairs for the last turn

--- a/workflow/bertgen.ipynb
+++ b/workflow/bertgen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "lucky-adventure",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "underlying-grill",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "facial-strategy",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "toxic-rough",
    "metadata": {},
    "outputs": [
@@ -77,6 +77,8 @@
     "    \n",
     "    restaurant_dialogs += 1\n",
     "    bert_dict = {}\n",
+    "    accum_slot_name_dict = {} # for each dialog accumulate all slot, value pairs\n",
+    "    accum_slot_act_dict = {} # for each dialog accumulate the active intent \n",
     "    bert_dict[\"dialogue_idx\"] = mwoz_dialogue[\"dialogue_id\"]\n",
     "    #bert_dict[\"domains\"] = mwoz_dialogue[\"services\"]\n",
     "    bert_dict[\"domains\"] = [service_domain]\n",
@@ -91,14 +93,16 @@
     "    for dom in mwoz_dialogue[\"turns\"][0][\"frames\"]:\n",
     "        act = dom[\"state\"][\"active_intent\"]\n",
     "        service = dom[\"service\"]\n",
-    "        # consider only service = \"restaurant\" (i.e service_domain) and \n",
-    "        # active_intent not being NONE\n",
-    "        if (not act == \"NONE\") and (service == service_domain):\n",
+    "        # consider only service = \"restaurant\" (i.e service_domain)\n",
+    "                        # if (not act == \"NONE\") and (service == service_domain):\n",
+    "        if service == service_domain:\n",
     "            req_slot = dom[\"state\"][\"requested_slots\"]\n",
     "            slot_val_mwoz = dom[\"state\"][\"slot_values\"]\n",
     "            for key, val in slot_val_mwoz.items():\n",
     "                belief_state_list.append({\"slots\": [[key, val[0]]], \"act\": act})\n",
     "                turn_label_list.append([key, val[0]])\n",
+    "                accum_slot_name_dict[key] = val[0]\n",
+    "                accum_slot_act_dict[key] = act\n",
     "            \n",
     "    transcript = mwoz_dialogue[\"turns\"][0][\"utterance\"]\n",
     "    system_acts = req_slot\n",
@@ -127,14 +131,15 @@
     "        for dom in utter_user[\"frames\"]:\n",
     "            act = dom[\"state\"][\"active_intent\"]\n",
     "            service = dom[\"service\"]\n",
-    "            # consider only service = \"restaurant\" (i.e service_domain) and \n",
-    "            # active_intent not being NONE\n",
-    "            if (not act == \"NONE\") and (service == service_domain):\n",
+    "            # consider only service = \"restaurant\" (i.e service_domain)\n",
+    "            if service == service_domain:\n",
     "                slot_val_mwoz = dom[\"state\"][\"slot_values\"]\n",
     "                req_slot = dom[\"state\"][\"requested_slots\"]\n",
     "                for key, val in slot_val_mwoz.items():\n",
     "                    belief_state_list.append({\"slots\": [[key, val[0]]], \"act\": act})\n",
     "                    turn_label_list.append([key, val[0]])\n",
+    "                    accum_slot_name_dict[key] = val[0]\n",
+    "                    accum_slot_act_dict[key] = act\n",
     "        \n",
     "        transcript = utter_user[\"utterance\"] \n",
     "        system_acts = req_slot\n",
@@ -153,12 +158,16 @@
     "    utter_sys = mwoz_dialogue[\"turns\"][i]\n",
     "    system_transcript = utter_sys[\"utterance\"] # system utterance\n",
     "    turn_idx += 1\n",
-    "        \n",
+    "    \n",
+    "    system_acts = []\n",
     "    belief_state_list = []\n",
     "    turn_label_list = []\n",
+    "    # dump all the accumulated slot and values to the belief state of the last turn\n",
+    "    for s, v in accum_slot_name_dict.items():\n",
+    "        belief_state_list.append({\"slots\": [[s, v]], \"act\": accum_slot_act_dict[s]})\n",
+    "        turn_label_list.append([s, v])\n",
     "        \n",
     "    transcript = \"\"\n",
-    "    system_acts = []\n",
     "    domain = service_domain\n",
     "        \n",
     "    bert_dialog_dict = {\"system_transcript\": system_transcript, \"turn_idx\": turn_idx,\n",
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "powerful-logan",
    "metadata": {},
    "outputs": [],
