--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "juvenile-advice",
+   "execution_count": 120,
+   "id": "9fb53a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "mwoz_file = \"dialogues_016.json\"\n",
-    "seq_in_file = \"seq.in\"\n",
-    "seq_out_file = \"seq.out\"\n",
-    "label_file = \"label\"\n",
+    "file_ind = \"017\"\n",
+    "target_dir = \"test/\"\n",
+    "mwoz_file = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/dialogues_\" + file_ind + \".json\"\n",
+    "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
+    "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
+    "label_file = target_dir + \"label\" + file_ind\n",
     "service_domains = [\"hotel\", \"restaurant\"]\n",
-    "include_line_num = True # flag to indicate if line numbers should be included"
+    "include_line_num = False # flag to indicate if line numbers should be included"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "unlimited-season",
+   "execution_count": 121,
+   "id": "e7e00aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "rational-print",
+   "execution_count": 122,
+   "id": "26e9ed43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "interim-contrary",
+   "execution_count": 123,
+   "id": "8b0b4f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bigger-fleece",
+   "execution_count": 124,
+   "id": "41663b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "enabling-canada",
+   "execution_count": 125,
+   "id": "efe57437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "disabled-percentage",
+   "execution_count": 126,
+   "id": "bd7d8fc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "committed-gamma",
+   "id": "d4d35814",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
