--- a/workflow/multiwozgen.ipynb
+++ b/workflow/multiwozgen.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "illegal-quantum",
+   "id": "4d4683a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "southeast-aviation",
+   "id": "5bd97cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "resident-enclosure",
+   "id": "c8f72800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "north-explorer",
+   "id": "1c5dfeb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "correct-triple",
+   "id": "6cb1bb14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "        return slots_list\n",
     "    \n",
     "    requested_slots = []\n",
-    "    if \"req_slots:\" in attr_vals:\n",
+    "    if \"req_slot:\" in attr_vals:\n",
     "        req_slots = attr_list[ind].strip()[10:].strip() # extract the req_list values\n",
     "        ind += 1\n",
     "        req_slots_values = req_slots.split(',')\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "elder-insight",
+   "id": "2c77a370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "potential-manual",
+   "id": "7ace9e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arranged-annex",
+   "id": "1e54390e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
