generalized slot and intent values

--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "9fb53a94",
+   "execution_count": 129,
+   "id": "5082d64c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "file_ind = \"017\"\n",
-    "target_dir = \"test/\"\n",
-    "mwoz_file = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/dialogues_\" + file_ind + \".json\"\n",
+    "target_dir = \"test_gen/\"\n",
+    "#target_dir = \"\"\n",
+    "mwoz_dir = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/\"\n",
+    "mwoz_file =  mwoz_dir + \"dialogues_\" + file_ind + \".json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
     "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
     "label_file = target_dir + \"label\" + file_ind\n",
@@ -20,8 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "e7e00aac",
+   "execution_count": 130,
+   "id": "fe4de3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build xlate table - xlate domain specific slot names and intents to generic name\n",
+    "xlate_slots_intents = True\n",
+    "xlate_file = \"slot_xlate.json\"\n",
+    "if xlate_slots_intents:\n",
+    "    xlate_dict = {}\n",
+    "    with open(xlate_file, \"r\") as f_xlate:\n",
+    "        xlate_list = json.load(f_xlate)\n",
+    "    for entry in xlate_list:\n",
+    "        for intents in entry[\"intents\"]:\n",
+    "            xlate_dict[intents[\"name\"]] = intents[\"new-name\"]\n",
+    "        for slot_names in entry[\"slots\"]:\n",
+    "            xlate_dict[slot_names[\"name\"]] = slot_names[\"new-name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "84148521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "26e9ed43",
+   "execution_count": 132,
+   "id": "e5f16487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "8b0b4f36",
+   "execution_count": 133,
+   "id": "11ce4148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "41663b4e",
+   "execution_count": 134,
+   "id": "7a89bf1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "efe57437",
+   "execution_count": 135,
+   "id": "012ad797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,24 +116,37 @@
     "            if active_intent == \"NONE\" and slot_values == {}: # if no active_intent, empty slot_values skip\n",
     "                continue\n",
     "            \n",
-    "            keyList = []\n",
-    "            valList = []\n",
+    "            if xlate_slots_intents: # if need to translate\n",
+    "                try: # check if xlate_dict has this intent\n",
+    "                    active_intent = xlate_dict[active_intent]\n",
+    "                except KeyError: # if not, leave it at active_intent\n",
+    "                    pass\n",
+    "            \n",
+    "            slotNameList = []\n",
+    "            slotValList = []\n",
     "            bio_str = \"\"\n",
-    "            for key, val in slot_values.items(): # get the slot names and slot values\n",
-    "                keyList.append(key.lower()) # slot names\n",
-    "                valList.append(val[0].lower()) # slot values\n",
+    "            for slotName, slotVal in slot_values.items(): # get the slot names and slot values\n",
+    "                if xlate_slots_intents: # if we want generic slot names\n",
+    "                    try: # check xlate_dict has the key, in which case use the value from xlate_dict\n",
+    "                        newSlotName = xlate_dict[slotName.lower()]\n",
+    "                    except KeyError: # if the key doesn't exist then don't translate\n",
+    "                        newSlotName = slotName.lower()\n",
+    "                else:\n",
+    "                    newSlotName = slotName.lower()\n",
+    "                slotNameList.append(newSlotName) # slot names\n",
+    "                slotValList.append(slotVal[0].lower()) # slot values\n",
     "            \n",
     "            for word in turn[\"utterance\"].split(): # check if each word in utterance exist in slot value\n",
     "                if word[-1] in remove_set: # if the last character is a non-alphanumeric\n",
-    "                        word = word[:-1]\n",
+    "                    word = word[:-1]\n",
     "                try:\n",
-    "                    ind = valList.index(word.lower()) # if the word is one of the slot values\n",
-    "                    parts = valList[ind].split() # for slot names that have multiple words\n",
+    "                    ind = slotValList.index(word.lower()) # if the word is one of the slot values\n",
+    "                    parts = slotValList[ind].split() # for slot names that have multiple words\n",
     "                    for i in range(len(parts)):\n",
     "                        if i == 0:\n",
-    "                            bio_str += \"B-\" + keyList[ind] + \" \" # 1st part of slot starts with B-\n",
+    "                            bio_str += \"B-\" + slotNameList[ind] + \" \" # 1st part of slot starts with B-\n",
     "                        else:\n",
-    "                            bio_str += \"I-\" + keyList[ind] + \" \" # other parts start with I-\n",
+    "                            bio_str += \"I-\" + slotNameList[ind] + \" \" # other parts start with I-\n",
     "                    \n",
     "                except ValueError:\n",
     "                    bio_str += \"O \"        \n",
@@ -127,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "bd7d8fc1",
+   "execution_count": 136,
+   "id": "730b594a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d35814",
+   "id": "c6eff299",
    "metadata": {},
    "outputs": [],
    "source": []
