--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "5f70143b",
+   "execution_count": 154,
+   "id": "70ebb5aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,13 @@
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
     "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
     "label_file = target_dir + \"label\" + file_ind\n",
-    "service_domains = [\"hotel\", \"restaurant\"]\n",
-    "include_line_num = False # flag to indicate if line numbers should be included"
+    "service_domains = [\"hotel\", \"restaurant\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "75ff5832",
+   "execution_count": 155,
+   "id": "7d125ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "376b3326",
+   "execution_count": 156,
+   "id": "2190bf80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "c99cf541",
+   "execution_count": 157,
+   "id": "8689a7d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "c709004a",
+   "execution_count": 158,
+   "id": "c84ad54b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def domain_of_interest(services, service_domains):\n",
+    "    \n",
     "    for service_domain in service_domains:\n",
     "        if service_domain in services:\n",
     "            return 1\n",
@@ -80,20 +80,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "3153ff22",
+   "execution_count": 159,
+   "id": "f0e8dbfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_cnt = 0\n",
-    "line_num_str = \"\"\n",
-    "remove_set = set(['.', ';', ',', '!', '?', '<', '>', '(', ')', '{', '}', '[', ']'])"
+    "def get_bio_string(utterance, slotValList, slotNameList):\n",
+    "    \n",
+    "    utterance = utterance.lower()\n",
+    "    bio_str = \"\"\n",
+    "    for i in range(len(slotValList)): # for each slot value in the slotValList\n",
+    "        try: # check if the slot value occurs in the utterance\n",
+    "            ind = utterance.index(slotValList[i]) # get the index of the slot value\n",
+    "            parts = slotValList[i].split() # handle blank inside slot value\n",
+    "            BI_slotName = \"\"\n",
+    "            for j in range(len(parts)):\n",
+    "                if j == 0:\n",
+    "                    BI_slotName += \"B-\" + slotNameList[i] + \" \" # 1st part is B-slotname\n",
+    "                else:\n",
+    "                    BI_slotName += \"I-\" + slotNameList[i] + \" \" # subsequent parts are I-slotname\n",
+    "            utterance = utterance[: ind] + BI_slotName + utterance[ind+len(slotValList[i]) :]\n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "            \n",
+    "    for word in utterance.split(): # check if each word in utterance exist in slot value\n",
+    "        if \"B-\" in word[0:2] or \"I-\" in word[0:2]:\n",
+    "            bio_str += word + \" \"\n",
+    "        else:\n",
+    "            bio_str += \"O \"    \n",
+    "    \n",
+    "    return bio_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "9bdf7796",
+   "execution_count": 160,
+   "id": "d6fd65ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_label(intent):\n",
+    "    \n",
+    "    key = list(intent.keys())\n",
+    "    if len(key) == 1:\n",
+    "        return intent[key[0]]\n",
+    "    else:\n",
+    "        if intent[key[0]] == \"NONE\" and intent[key[1]] == \"NONE\":\n",
+    "            return \"NONE\"\n",
+    "        elif intent[key[0]] == \"NONE\":\n",
+    "            return intent[key[1]]\n",
+    "        else:\n",
+    "            return intent[key[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "0d33e1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +148,11 @@
     "    for turn in dialogue[\"turns\"]:\n",
     "        if turn[\"speaker\"] == \"SYSTEM\": # skip all the system generated dialogs\n",
     "            continue\n",
-    "        \n",
+    "            \n",
+    "        slotNameList = []\n",
+    "        slotValList = []\n",
+    "        intent = {}\n",
+    "        hotel_restaurant = False # flag to indicate if the utterance is relevant to hotel and/or restaurant\n",
     "        for dom in turn[\"frames\"]: # each domain within a frame\n",
     "            if not domain_of_interest(dom[\"service\"], service_domains): # if not one of service_domain\n",
     "                continue\n",
@@ -116,15 +163,14 @@
     "            if active_intent == \"NONE\" and slot_values == {}: # if no active_intent, empty slot_values skip\n",
     "                continue\n",
     "            \n",
+    "            hotel_restaurant = True #set the flag true; at least one of hotel or restaurant active domain\n",
+    "            \n",
     "            if xlate_slots_intents: # if need to translate\n",
     "                try: # check if xlate_dict has this intent\n",
-    "                    active_intent = xlate_dict[active_intent]\n",
+    "                    intent[dom[\"service\"]] = xlate_dict[active_intent]\n",
     "                except KeyError: # if not, leave it at active_intent\n",
-    "                    pass\n",
-    "            \n",
-    "            slotNameList = []\n",
-    "            slotValList = []\n",
-    "            bio_str = \"\"\n",
+    "                    intent[dom[\"service\"]] = active_intent\n",
+    "                \n",
     "            for slotName, slotVal in slot_values.items(): # get the slot names and slot values\n",
     "                if xlate_slots_intents: # if we want generic slot names\n",
     "                    try: # check xlate_dict has the key, in which case use the value from xlate_dict\n",
@@ -135,36 +181,21 @@
     "                    newSlotName = slotName.lower()\n",
     "                slotNameList.append(newSlotName) # slot names\n",
     "                slotValList.append(slotVal[0].lower()) # slot values\n",
+    "        \n",
+    "        if hotel_restaurant: \n",
+    "            bio_str = get_bio_string(turn[\"utterance\"], slotValList, slotNameList)        \n",
+    "            label = get_label(intent)\n",
     "            \n",
-    "            for word in turn[\"utterance\"].split(): # check if each word in utterance exist in slot value\n",
-    "                if word[-1] in remove_set: # if the last character is a non-alphanumeric\n",
-    "                    word = word[:-1]\n",
-    "                try:\n",
-    "                    ind = slotValList.index(word.lower()) # if the word is one of the slot values\n",
-    "                    parts = slotValList[ind].split() # for slot names that have multiple words\n",
-    "                    for i in range(len(parts)):\n",
-    "                        if i == 0:\n",
-    "                            bio_str += \"B-\" + slotNameList[ind] + \" \" # 1st part of slot starts with B-\n",
-    "                        else:\n",
-    "                            bio_str += \"I-\" + slotNameList[ind] + \" \" # other parts start with I-\n",
-    "                    \n",
-    "                except ValueError:\n",
-    "                    bio_str += \"O \"        \n",
-    "            \n",
-    "            if include_line_num:\n",
-    "                line_cnt += 1\n",
-    "                line_num_str = str(line_cnt) + \" \"\n",
-    "            \n",
-    "            fp_in.write(line_num_str + turn[\"utterance\"] + \"\\n\")\n",
-    "            fp_out.write(line_num_str + bio_str + \"\\n\")\n",
-    "            fp_label.write(line_num_str + active_intent + \"\\n\")\n",
+    "            fp_in.write(turn[\"utterance\"] + \"\\n\")\n",
+    "            fp_out.write(bio_str + \"\\n\")\n",
+    "            fp_label.write(label + \"\\n\")\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "3e1e48cd",
+   "execution_count": 162,
+   "id": "fe7088df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53e0f04",
+   "id": "d51f7564",
    "metadata": {},
    "outputs": [],
    "source": []
