--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "70ebb5aa",
+   "execution_count": 145,
+   "id": "843593fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "7d125ce2",
+   "execution_count": 146,
+   "id": "2ddacc4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "2190bf80",
+   "execution_count": 147,
+   "id": "46e4e59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "8689a7d3",
+   "execution_count": 148,
+   "id": "436b9e50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "c84ad54b",
+   "execution_count": 149,
+   "id": "fb95177d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "f0e8dbfe",
+   "execution_count": 150,
+   "id": "b2c40038",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bio_string(utterance, slotValList, slotNameList):\n",
     "    \n",
     "    utterance = utterance.lower()\n",
+    "    ignore_char = set(['.', '?', ':', ';', ',', '\"', \"'\", '!', '<', '>', '(', ')', '[', ']'])\n",
     "    bio_str = \"\"\n",
     "    for i in range(len(slotValList)): # for each slot value in the slotValList\n",
     "        try: # check if the slot value occurs in the utterance\n",
@@ -103,19 +104,20 @@
     "        except ValueError:\n",
     "            pass\n",
     "            \n",
-    "    for word in utterance.split(): # check if each word in utterance exist in slot value\n",
+    "    for word in utterance.strip().split(): # check if each word in utterance exist in slot value\n",
     "        if \"B-\" in word[0:2] or \"I-\" in word[0:2]:\n",
     "            bio_str += word + \" \"\n",
     "        else:\n",
-    "            bio_str += \"O \"    \n",
+    "            if not word in ignore_char:\n",
+    "                bio_str += \"O \"    \n",
     "    \n",
     "    return bio_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "d6fd65ec",
+   "execution_count": 151,
+   "id": "f6965b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "0d33e1ea",
+   "execution_count": 152,
+   "id": "1f716505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "fe7088df",
+   "execution_count": 153,
+   "id": "99c469b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51f7564",
+   "id": "ef63d7ce",
    "metadata": {},
    "outputs": [],
    "source": []
