--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "843593fc",
+   "id": "7ac0b431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "2ddacc4d",
+   "id": "73698fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "46e4e59d",
+   "id": "b85a787a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "436b9e50",
+   "id": "6c991b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "fb95177d",
+   "id": "5b08ddd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "b2c40038",
+   "id": "8d360f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,13 +111,13 @@
     "            if not word in ignore_char:\n",
     "                bio_str += \"O \"    \n",
     "    \n",
-    "    return bio_str"
+    "    return bio_str.strip()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "f6965b63",
+   "id": "044f1a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "1f716505",
+   "id": "39b8374a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "99c469b1",
+   "id": "9d2d081a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef63d7ce",
+   "id": "2ee491f0",
    "metadata": {},
    "outputs": [],
    "source": []
